--- a/src/App.css
+++ b/src/App.css
@@ -4,71 +4,200 @@ body, #root {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
+}
+
+* {
+  font-family: "Electrolize", sans-serif;
 }
   
 header {
-  background-color: rgb(126, 237, 237);
-  display: flex;
-  flex-direction: column;
+  background-color: rgb(41, 221, 206);
   width: 100%;
   padding-top: 2vh;
-  padding-bottom: 5vh;
+  padding-bottom: 2vh;
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr;
+  gap: 2vh;
+  justify-items: center;
 }
 
-main {
-  min-height: 80vh;
+#title {
+  grid-area: 1 / 1 / 3 / 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -3vw;
+
+  img {
+    width: 15vw;
+    margin-right: 2vw;
+  }
 }
 
 #menu-buttons {
+  justify-self: start;
   display: flex;
-  gap: 10vw;
   justify-content: center;
+  gap: 4vw;
+  align-items: center;
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#scoreboard {
+  justify-self: start;
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(189, 251, 231);
+  width: 20vw;
+  border-radius: 20px;
+  padding: 0 1vw;
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  min-height: 70vh;
+}
+
+#loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 10vw;
+  }
 }
 
 main {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  gap: 3vh;
+  padding: 4vh 5vh;
   width: 100%;
+  box-sizing: border-box;
+  align-items: center;
+  justify-items: center;
+  background-color: rgb(189, 251, 231);
 }
 
 .pokemon-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 5px solid grey;
+  width: 25vh;
+  height: 32vh;
+  box-sizing: border-box;
+  transform-style: preserve-3d;
+  transition: transform 0.7s ease-in-out;
+  position: relative;
+  border-radius: 20px;
 }
 
-h1, h2 {
+.card-front:hover {
+  box-shadow: 0 0 20px 10px rgb(247, 191, 5);
+}
+
+.card-back:hover {
+  box-shadow: 0 0 20px 10px #20acbe;
+}
+
+button {
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: rgb(242, 230, 104);
+  transition: all 0.5s ease-out;
+  outline: none;
+  border: 2px solid grey;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:hover {
+  border: 2px solid rgb(1, 151, 69);
+  background-color: #ffffff;
+  color: rgb(1, 151, 69);
+}
+
+h1 {
+  font-size: 42px;
   text-align: center;
+  user-select: none; 
 }
 
-img {
+h2 {
+  text-align: center;
+  user-select: none; 
+}
+
+.card-back {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: box-shadow 0.1s ease-in-out;
+  z-index: 1;
+  backface-visibility: hidden;
+  position: absolute;
+  border-radius: 20px;
+  height: 100%;
+  background-color: rgb(75, 244, 151);
+  border: 3px solid grey;
+}
+
+.card-back img {
   margin: auto;
-  height: 20vh;
+  width: 70%;
+  padding: 0;
+  margin: 0;
+  -webkit-user-drag: none;
+}
+
+.card-front {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  transition: opacity 1s ease-in 0.8s, box-shadow 0.1s ease-in-out;
+  z-index: -1;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  position: absolute;
+  background-color:rgb(242, 230, 104);
+  border-radius: 20px;
+  border: 3px solid grey;
+}
+
+.card-front img {
+  margin: 0;
+  padding: 0;
+  width: 80%;
 }
 
 .faceup {
-  background-color: blue;
-}
-
-.facedown {
-  background-color: black;
-}
-
-.visible {
-  display: block;
+  transform: rotateY(180deg);
 }
 
 .hidden {
-  display: none;
+  opacity: 0.2;
+  pointer-events: none;
 }
+
 
 footer {
   text-align: center;
-  background-color: rgb(80, 213, 213);
+  background-color: rgb(41, 221, 206);
   margin: 0;
-  padding: 2vh;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
   width: 100%;
 }
 
