--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ main {
   display: flex;
   justify-content: center;
   min-height: 70vh;
+  position: relative;
 }
 
 #loading {
@@ -77,7 +78,7 @@ main {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 3vh;
-  padding: 4vh 5vh;
+  padding: 6vh;
   width: 100%;
   box-sizing: border-box;
   align-items: center;
@@ -194,6 +195,31 @@ h2 {
   pointer-events: none;
 }
 
+#windiv {
+  background-color: rgb(56, 22, 142);
+  width: 20vw;
+  color: whitesmoke;
+  position: absolute;
+  border-radius: 20px;
+  border: 3px solid grey;
+  padding: 1vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 2s ease-in 1s;
+  transform: translate(0vw);
+
+  img {
+    width: 80%;
+  }
+}
+
+@starting-style {
+  #windiv {
+    transform: translate(-70vw) rotateZ(-1440deg);
+  }
+}
+
 
 footer {
   text-align: center;
@@ -203,5 +229,16 @@ footer {
   padding-bottom: 2vh;
   box-shadow: 0px 0px 5px 2px grey;
   width: 100%;
+  z-index: 1;
+
+  div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  img {
+    width: 5vw;
+  }
 }
 
